--- a/src/Neuroglia.Blazor.Dagre/Templates/NodeTemplate.razor
+++ b/src/Neuroglia.Blazor.Dagre/Templates/NodeTemplate.razor
@@ -23,7 +23,7 @@
                 width="@Node.Bounds!.Width.ToInvariantString()" 
                 height="@Constants.LabelHeight"
             >
-                <div class="label-content">@Node.Label</div>
+                <div title="@Node.Label" class="label-content">@Node.Label</div>
             </foreignObject>
         </g>
     }
@@ -41,9 +41,9 @@
 
     protected virtual INodeViewModel Node => (INodeViewModel)this.Element;
 
-    protected bool isDirty = false;    
-    protected ProfilingTimer? profilingTimer;
-    protected bool enableProfiling
+    bool isDirty = false;    
+    ProfilingTimer? profilingTimer;
+    protected bool EnableProfiling
     {
         get => this.Graph?.EnableProfiling ?? false;
         set
@@ -74,11 +74,11 @@
             this.Node.Changed += this.TriggerRender;
             this.isDirty = true;
         }
-        if (this.enableProfiling) this.CreateProfilingTimer();
+        if (this.EnableProfiling) this.CreateProfilingTimer();
         this.profilingTimer?.Start();
     }
 
-    protected void TriggerRender()
+    protected void TriggerRender(object? sender, EventArgs e)
     {
         this.profilingTimer?.Start();
         this.isDirty = true;
@@ -104,7 +104,7 @@
         if (!this.disposed)
         {
             this.Node.Changed -= this.TriggerRender;
-            if (this.enableProfiling && this.profilingTimer != null)
+            if (this.EnableProfiling && this.profilingTimer != null)
             {
                 this.profilingTimer.Dispose();
             }
