fix(Blazor.Dagre): using edge own width and height in the template instead of its bounding box's
Signed-off-by: Jean-Baptiste Bianchi <jb.bianchi@neuroglia.io>

--- a/src/Neuroglia.Blazor.Dagre/Templates/ClusterTemplate.razor
+++ b/src/Neuroglia.Blazor.Dagre/Templates/ClusterTemplate.razor
@@ -1,6 +1,6 @@
 ﻿@implements IDisposable
 
-<g class="cluster @Cluster.CssClass" transform="translate(@Cluster.X.ToInvariantString(), @Cluster.Y.ToInvariantString())">
+<g id="@Cluster.Id" class="cluster @Cluster.CssClass" transform="translate(@Cluster.X.ToInvariantString(), @Cluster.Y.ToInvariantString())">
     <g class="cluster-shape">
         @if (Cluster.Shape == NodeShape.Circle)
         {
