fix(Blazor.Dagre): fixed custom controls approach
Signed-off-by: Jean-Baptiste Bianchi <jb.bianchi@neuroglia.io>

--- a/src/Neuroglia.Blazor.Dagre/DagreGraph.razor
+++ b/src/Neuroglia.Blazor.Dagre/DagreGraph.razor
@@ -97,7 +97,7 @@
             }
             @if (CenterControl != null)
             {
-                <CascadingValue Value="CenterAsync" Name="CenterAsync">
+                <CascadingValue Value="this">
                     @CenterControl
                 </CascadingValue>
             }
@@ -111,7 +111,7 @@
             }
             @if (ZoomToFitControl != null)
             {
-                <CascadingValue Value="ZoomToFitAsync" Name="ZoomToFitAsync">
+                <CascadingValue Value="this">
                     @ZoomToFitControl
                 </CascadingValue>
             }
@@ -125,7 +125,7 @@
             }
             @if (SaveAsPngControl != null)
             {
-                <CascadingValue Value="SaveAsPngAsync" Name="SaveAsPngAsync">
+                <CascadingValue Value="this">
                     @SaveAsPngControl
                 </CascadingValue>
             }
